--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,13 @@
     <meta name="keywords" content="contact, boulangerie, commande, réservation">
     <title>Contact - Boulangerie LB</title>
 
-    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/variables.css">
@@ -27,7 +29,7 @@
     <header class="header">
         <div class="header__container">
             <a href="index.html" class="header__logo" aria-label="Retour à l'accueil">
-                <img src="assets/images/logo.png" alt="Logo Boulangerie LB">
+                <img src="assets/logo.png" alt="Boulangerie LB, boulangerie artisanale">
             </a>
 
             <nav class="header__nav" aria-label="Navigation principale">
@@ -39,7 +41,7 @@
             </nav>
 
             <button class="header__search" aria-label="Rechercher">
-                <span>🔍</span>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </button>
 
             <button class="header__burger" aria-label="Menu" aria-expanded="false">
@@ -102,7 +104,7 @@
         <div class="container">
             <div class="footer__content">
                 <a href="index.html" class="footer__logo">
-                    <img src="assets/images/logo.png" alt="Logo Boulangerie LB">
+                    <img src="assets/logo.png" alt="Boulangerie LB, boulangerie artisanale">
                 </a>
 
                 <nav class="footer__nav" aria-label="Navigation footer">
@@ -114,10 +116,16 @@
                 </nav>
 
                 <div class="footer__socials">
-                    <a href="mailto:contact@boulangerie-lb.fr" class="footer__social-link" aria-label="Email">📧</a>
-                    <a href="tel:+33123456789" class="footer__social-link" aria-label="Téléphone">📞</a>
+                    <a href="mailto:contact@boulangerie-lb.fr" class="footer__social-link" aria-label="Email">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+                    <a href="tel:+33123456789" class="footer__social-link" aria-label="Téléphone">
+                        <i class="fa-solid fa-phone"></i>
+                    </a>
                     <a href="https://instagram.com" target="_blank" rel="noopener" class="footer__social-link"
-                        aria-label="Instagram">📷</a>
+                        aria-label="Instagram">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 </div>
             </div>
 
