--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <title>Boulangerie LB - Accueil</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -34,7 +36,7 @@
     <header class="header">
         <div class="header__container">
             <a href="index.html" class="header__logo" aria-label="Retour à l'accueil">
-                <img src="assets/images/logo.png" alt="Logo Boulangerie LB">
+                <img src="assets/logo.png" alt="Boulangerie LB, boulangerie artisanale">
             </a>
 
             <!-- Navigation Desktop -->
@@ -47,7 +49,7 @@
             </nav>
 
             <button class="header__search" aria-label="Rechercher">
-                <span>🔍</span>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </button>
 
             <!-- Burger Menu Button -->
@@ -161,7 +163,7 @@
         <div class="container">
             <div class="footer__content">
                 <a href="index.html" class="footer__logo">
-                    <img src="assets/images/logo.png" alt="Logo Boulangerie LB">
+                    <img src="assets/logo.png" alt="Boulangerie LB, boulangerie artisanale">
                 </a>
 
                 <nav class="footer__nav" aria-label="Navigation footer">
@@ -173,10 +175,16 @@
                 </nav>
 
                 <div class="footer__socials">
-                    <a href="mailto:contact@boulangerie-lb.fr" class="footer__social-link" aria-label="Email">📧</a>
-                    <a href="tel:+33123456789" class="footer__social-link" aria-label="Téléphone">📞</a>
+                    <a href="mailto:contact@boulangerie-lb.fr" class="footer__social-link" aria-label="Email">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+                    <a href="tel:+33123456789" class="footer__social-link" aria-label="Téléphone">
+                        <i class="fa-solid fa-phone"></i>
+                    </a>
                     <a href="https://instagram.com" target="_blank" rel="noopener" class="footer__social-link"
-                        aria-label="Instagram">📷</a>
+                        aria-label="Instagram">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                 </div>
             </div>
 
